# CMancala

./: .clang-format  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES  build.md  build.sh  build_pgo.sh
benchmark/: info.md
include/: algo.h  board.h  config.h  containers.h  handleConfig.h  handleGame.h  handlePlaying.h  interface.h  render.h  utility.h
include/logic/: algo.h  board.h  solveCache.h  throughput.h  utility.h
include/logic/solver/: algo.h  cache.h  common.h  egdb.h  global.h  local.h  opening_book.h  opening_book_data.h  quick.h  solveCache.h  solveCache.hpp  solver.h  troughput.h
include/logic/solver/clipped/: global.h  local.h
include/logic/solver/egdb/: core.h  egdb_mem.h
include/logic/solver/full/: global.h  local.h
include/logic/solver/impl/: cache_template.h  global_template.h  local_template.h  macros.h  solver_template.h
include/user/: handleConfig.h  handleGame.h  handlePlaying.h  interface.h  render.h  runBenchmark.h
measurements/: info.md
measurements/v3.0/: 2solve_global.csv  2solve_local@24.csv  3solve_global.csv  3solve_local@24.csv  4solve_local@31.csv
measurements/v3.1/: 2solve_local@24.csv  3solve_local@24.csv
measurements/v3.2/: 2solve_local@24.csv  3solve_local@24.csv  3solve_local_nooneshot@24.csv  4solve_local@31.csv
measurements/v3.3/: 2solve_local@24.csv  3solve_local@24.csv  3solve_local_nooneshot@24.csv  4solve_local@31.csv
measurements/v3.4/: 2solve_local@24.csv  3solve_local@24.csv  4solve_local@31.csv
measurements/v4.0/: 3solve_clip_local@24.csv  3solve_clip_local_nooneshot@24.csv  3solve_local@24.csv  3solve_local_nooneshot@24.csv  4solve_clip_local@31.csv  4solve_local@31.csv
measurements/v5.0/: 3solve_clip_local@NC24.csv  4solve_local@C31.csv  4solve_local@NC31.csv
measurements/v6.0/: 3solve_local@NC24.csv  4solve_local@NC31.csv  5solve_clip_local@NC31.csv  5solve_local@NC31.csv  5solve_local@NC34.csv
scripts/: build.sh  build_lz4.sh  build_mmap.sh  build_pgo.sh  build_web.sh  build_zstd.sh
src/: algo.c  board.c  handleConfig.c  handleGame.c  interface.c  main.c  render.c  utility.c
src/logic/: algo.c  board.c  render.c  solveCache.c  throughput.c  utility.c
src/logic/solver/: algo.c  cache.c  egdb.c  global.c  local.c  opening_book.c  quick.c  solveCache.c  solveCache.cpp  solver.c  troughput.c
src/logic/solver/clipped/: global.c  local.c
src/logic/solver/egdb/: core.c
src/logic/solver/egdb/memory/: direct.c  lz4.c  mmap.c  zstd.c
src/logic/solver/full/: global.c  local.c
src/menu/: handleConfig.c  handleGame.c  handlePlaying.c  interface.c
src/user/: handleConfig.c  handleGame.c  handlePlaying.c  interface.c  interface_web.c  render.c  runBenchmark.c
src/web/: interface.c  interface_web.c  shell.html  style.css
tests/: validateLocalCache.txt
utility/: BuildOpeningBook.py  CacheSizeSweep.py  CompileOpeningBook.py  FindDrawn.py  TestAnalyze.py  TestClip.py  TestEGDB.py  TestStep.py  TestStepEGDB.py  VisualizeBenchmark.py  VisualizeMeasurements.py
